dnl Process this file with autoconf to produce a configure script.

AC_PREREQ([2.50])

AC_INIT([rs-cll], [20140303.2107], [rs@ralph-schleicher.de])
AM_INIT_AUTOMAKE([foreign no-define dist-bzip2])

AC_CONFIG_SRCDIR([lib/rs-cll.asd])
AC_CONFIG_FILES([Makefile doc/Makefile])

dnl Optional features.
AM_MAINTAINER_MODE

AC_SUBST([PACKAGE_NAME])
AC_SUBST([PACKAGE_VERSION])
AC_SUBST([PACKAGE_STRING])
AC_SUBST([PACKAGE_BUGREPORT])
AC_SUBST([PACKAGE_TARNAME])

AC_OUTPUT
