## Makefile.am --- make file for Ralph's Common Lisp library.

# Copyright (C) 2012, 2013 Ralph Schleicher

# Redistribution and use in source and binary forms, with or without
# modification, are permitted provided that the following conditions
# are met:
#
#    * Redistributions of source code must retain the above copyright
#      notice, this list of conditions and the following disclaimer.
#
#    * Redistributions in binary form must reproduce the above copyright
#      notice, this list of conditions and the following disclaimer in
#      the documentation and/or other materials provided with the
#      distribution.
#
#    * The name of the author may not be used to endorse or promote
#      products derived from this software without specific prior
#      written permission.
#
# THIS SOFTWARE IS PROVIDED BY THE AUTHOR "AS IS" AND ANY EXPRESS
# OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
# WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
# ARE DISCLAIMED. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY DIRECT,
# INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
# (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
# SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION)
# HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT,
# STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING
# IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
# POSSIBILITY OF SUCH DAMAGE.

## Code:

nobase_dist_rs_cll_DATA = \
rs-cll.asd \
rs-cll.lisp \
lisp/data.lisp \
lisp/types.lisp \
lisp/conditions.lisp \
lisp/symbols.lisp \
lisp/numbers.lisp \
lisp/quantities.lisp \
lisp/characters.lisp \
lisp/strings.lisp \
lisp/sequences.lisp \
math/math.lisp \
math/brent.lisp \
math/polynomials.lisp \
misc/regex.lisp \
misc/bugs.lisp \
app/environ.lisp \
app/argv.lisp \
app/exit.lisp \
app/diag.lisp \
app/work-dir.lisp \
app/temp-dir.lisp \
app/getopt.lisp \
exec/exec.lisp \
exec/exec-ccl.lisp \
exec/exec-clisp.lisp \
exec/exec-ecl.lisp \
exec/exec-sbcl.lisp \
$(nil)

## Makefile.am ends here
